[package]
name = "emusync"
version = "0.1.0"
edition = "2024"
description = "Cross-machine emulation save, mod, and shader cache sync over SSH"
repository = "https://github.com/guitaripod/emusync"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
